test_programs/compile_failure/noirc_frontend_tests_normal_generic_used_when_numeric_expected_in_where_clause_1/src/main.nr

    trait Deserialize<let N: u32> {
        fn deserialize(fields: [Field; N]) -> Self;
    }

    pub fn read<T, N>() -> T where T: Deserialize<N> {
        T::deserialize([0, 1])
    }
    